--- a/day-1/2-leaves.ipynb
+++ b/day-1/2-leaves.ipynb
@@ -124,7 +124,7 @@
    "source": [
     "Sure enough, it's a note, with a LilyPond string of D5 and a duration of a dotted half note. (If we hadn't provided a LilyPond string, we'd have gotten a middle C quarter note.)\n",
     "\n",
-    "So what happened when we made our note? In our object model, we have a class called `Note` that models a musical note. A class is a template for a certain kind of thing. The `Note` class models the characteristics of a note (attributes). To make a new note (a new instance of the Note class), we called our class's initializer method, `Note()`, and assigned the returned instance to a variable, named whatever we like (on the left side of the equals sign). You will see this pattern of instantiating objects through right-to-left assignment over and over, throughout the system.\n",
+    "So what happened when we made our note? In our object model, we have a class called `Note` that models a musical note. A class is a template for a certain kind of thing. The `Note` class models the characteristics of a note (attributes). To make a new note (a new instance of the `Note` class), we called our class's initializer method, `Note()`, and assigned the returned instance to a variable, named whatever we like (on the left side of the equals sign). You will see this pattern of instantiating objects through right-to-left assignment over and over, throughout the system.\n",
     "\n",
     "Once we have our note instance, we can access characteristics about our note that we'd expect it to have using dot chaining syntax, where we start with our variable name and continue, after a dot, with the attribute we'd like to get:"
    ]
