--- a/day-4/2-score-package-tools.ipynb
+++ b/day-4/2-score-package-tools.ipynb
@@ -25,16 +25,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "usage: abj-dev [-h] [--version]\r\n",
-      "               {help,list,api,book,build,clean,doctest,material,replace,score,segment,stats}\r\n",
+      "               {help,list,api,book,builds,check-class-sections,clean,doctest,material,replace,score,segment,stats}\r\n",
       "               ...\r\n",
       "\r\n",
       "Entry-point to Abjad developer scripts catalog.\r\n",
@@ -44,14 +42,17 @@
       "  --version             show program's version number and exit\r\n",
       "\r\n",
       "subcommands:\r\n",
-      "  {help,list,api,book,build,clean,doctest,material,replace,score,segment,stats}\r\n",
+      "  {help,list,api,book,builds,check-class-sections,clean,doctest,material,replace,score,segment,stats}\r\n",
       "    help                print subcommand help\r\n",
       "    list                list subcommands\r\n",
       "    api                 Build the Abjad APIs.\r\n",
       "    book                Preprocess LaTeX files with Abjad.\r\n",
-      "    build               Manage score package build targets.\r\n",
-      "    clean               Clean *.pyc, *.swp, __pycache__ and tmp* files and\r\n",
-      "                        folders from PATH.\r\n",
+      "    builds              Manage score package build targets.\r\n",
+      "    check-class-sections\r\n",
+      "                        Check the order and contents of class sections in a\r\n",
+      "                        path or file.\r\n",
+      "    clean               Clean *.pyc, *.swp, .cache, __pycache__ and tmp* files\r\n",
+      "                        and folders from PATH.\r\n",
       "    doctest             Run doctests on all modules in current path.\r\n",
       "    material            Manage score package materials.\r\n",
       "    replace             Replace text.\r\n",
@@ -124,10 +125,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -221,10 +220,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -293,10 +290,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -345,58 +340,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "usage: manage-build-target [-h] [--version]\r\n",
-      "                           (--new [NAME] | --render NAME | --distribute NAME | --list)\r\n",
-      "                           [--front-cover] [--back-cover] [--preface]\r\n",
-      "                           [--score] [--music] [--parts]\r\n",
-      "                           [--paper-size PAPER_SIZE]\r\n",
-      "                           [--orientation ORIENTATION] [--score-path SCORE]\r\n",
-      "                           [--force]\r\n",
-      "\r\n",
-      "Manage score package build targets.\r\n",
-      "\r\n",
-      "optional arguments:\r\n",
-      "  -h, --help            show this help message and exit\r\n",
-      "  --version             show program's version number and exit\r\n",
-      "\r\n",
-      "actions:\r\n",
-      "  --new [NAME], -N [NAME]\r\n",
-      "                        create a new build target\r\n",
-      "  --render NAME, -R NAME\r\n",
-      "                        render sources\r\n",
-      "  --distribute NAME, -U NAME\r\n",
-      "                        stage build artifacts for distribution\r\n",
-      "  --list, -L            list build targets\r\n",
-      "\r\n",
-      "--render flags:\r\n",
-      "  Use when rendering specific assets only.\r\n",
-      "\r\n",
-      "  --front-cover         render the front cover LaTeX source\r\n",
-      "  --back-cover          render the back cover LaTeX source\r\n",
-      "  --preface             render the preface LaTeX source\r\n",
-      "  --score               render the aggregate score LaTeX source\r\n",
-      "  --music               render the music LilyPond source\r\n",
-      "  --parts               render the parts LilyPond source\r\n",
-      "\r\n",
-      "--new options:\r\n",
-      "  --paper-size PAPER_SIZE\r\n",
-      "                        select new build target paper size\r\n",
-      "  --orientation ORIENTATION\r\n",
-      "                        select new build target orientation\r\n",
-      "\r\n",
-      "common options:\r\n",
-      "  --score-path SCORE, -s SCORE\r\n",
-      "                        score path or package name\r\n",
-      "  --force, -f           force overwriting\r\n"
+      "usage: abj-dev [-h] [--version]\r\n",
+      "               {help,list,api,book,builds,check-class-sections,clean,doctest,material,replace,score,segment,stats}\r\n",
+      "               ...\r\n",
+      "abj-dev: error: argument subparser_name: invalid choice: 'build' (choose from 'help', 'list', 'api', 'book', 'builds', 'check-class-sections', 'clean', 'doctest', 'material', 'replace', 'score', 'segment', 'stats')\r\n"
      ]
     }
    ],
@@ -407,9 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -430,9 +382,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
