--- a/day-4/1-score-package-structure.ipynb
+++ b/day-4/1-score-package-structure.ipynb
@@ -134,14 +134,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/bin/sh: 1: tree: not found\r\n"
+      "\u001b[34;40mtrio_score/\u001b[00m\r\n",
+      "├── .gitignore\r\n",
+      "├── .travis.yml\r\n",
+      "├── README.md\r\n",
+      "├── requirements.txt\r\n",
+      "├── setup.cfg\r\n",
+      "├── setup.py\r\n",
+      "└── \u001b[34;40mtrio_score\u001b[00m/\r\n",
+      "\r\n",
+      "1 directory, 6 files\r\n"
      ]
     }
    ],
@@ -160,14 +169,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/bin/sh: 1: tree: not found\r\n"
+      "\u001b[34;40mtrio_score/trio_score/\u001b[00m\r\n",
+      "├── Makefile\r\n",
+      "├── __init__.py\r\n",
+      "├── \u001b[34;40mbuild\u001b[00m/\r\n",
+      "├── \u001b[34;40mdistribution\u001b[00m/\r\n",
+      "├── \u001b[34;40metc\u001b[00m/\r\n",
+      "├── \u001b[34;40mmaterials\u001b[00m/\r\n",
+      "├── \u001b[34;40msegments\u001b[00m/\r\n",
+      "├── \u001b[34;40mstylesheets\u001b[00m/\r\n",
+      "├── \u001b[34;40mtest\u001b[00m/\r\n",
+      "└── \u001b[34;40mtools\u001b[00m/\r\n",
+      "\r\n",
+      "8 directories, 2 files\r\n"
      ]
     }
    ],
@@ -186,14 +207,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/bin/sh: 1: tree: not found\r\n"
+      "\u001b[34;40mtrio_score/trio_score/materials/\u001b[00m\r\n",
+      "├── __init__.py\r\n",
+      "├── \u001b[34;40mmy_droning_rhythm_maker\u001b[00m/\r\n",
+      "├── \u001b[34;40mmy_fast_rhythm_maker\u001b[00m/\r\n",
+      "├── \u001b[34;40mmy_pitches\u001b[00m/\r\n",
+      "└── \u001b[34;40mmy_slow_rhythm_maker\u001b[00m/\r\n",
+      "\r\n",
+      "4 directories, 1 file\r\n"
      ]
     }
    ],
@@ -203,14 +231,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/bin/sh: 1: tree: not found\r\n"
+      "\u001b[34;40mtrio_score/trio_score/materials/my_fast_rhythm_maker/\u001b[00m\r\n",
+      "├── __init__.py\r\n",
+      "├── definition.py\r\n",
+      "└── illustration.ly\r\n",
+      "\r\n",
+      "0 directories, 3 files\r\n"
      ]
     }
    ],
@@ -220,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -285,7 +318,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/bin/sh: 1: tree: not found\r\n"
+      "\u001b[34;40mtrio_score/trio_score/tools/\u001b[00m\r\n",
+      "├── ScoreTemplate.py\r\n",
+      "├── SegmentMaker.py\r\n",
+      "└── __init__.py\r\n",
+      "\r\n",
+      "0 directories, 3 files\r\n"
      ]
     }
    ],
@@ -295,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -525,7 +563,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/bin/sh: 1: tree: not found\r\n"
+      "\u001b[34;40mtrio_score/trio_score/segments/\u001b[00m\r\n",
+      "├── __init__.py\r\n",
+      "├── \u001b[34;40msection_one\u001b[00m/\r\n",
+      "├── \u001b[34;40msection_three\u001b[00m/\r\n",
+      "└── \u001b[34;40msection_two\u001b[00m/\r\n",
+      "\r\n",
+      "3 directories, 1 file\r\n"
      ]
     }
    ],
@@ -542,7 +586,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/bin/sh: 1: tree: not found\r\n"
+      "\u001b[34;40mtrio_score/trio_score/segments/section_one/\u001b[00m\r\n",
+      "├── __init__.py\r\n",
+      "├── definition.py\r\n",
+      "└── illustration.ly\r\n",
+      "\r\n",
+      "0 directories, 3 files\r\n"
      ]
     }
    ],
@@ -624,7 +673,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/bin/sh: 1: tree: not found\r\n"
+      "\u001b[34;40mtrio_score/trio_score/stylesheets/\u001b[00m\r\n",
+      "├── parts.ily\r\n",
+      "└── stylesheet.ily\r\n",
+      "\r\n",
+      "0 directories, 2 files\r\n"
      ]
     }
    ],
@@ -761,7 +814,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/bin/sh: 1: tree: not found\r\n"
+      "\u001b[34;40mtrio_score/trio_score/build/\u001b[00m\r\n",
+      "├── \u001b[34;40massets\u001b[00m/\r\n",
+      "│   ├── instrumentation.tex\r\n",
+      "│   └── performance-notes.tex\r\n",
+      "├── \u001b[34;40mletter-portrait\u001b[00m/\r\n",
+      "│   ├── Makefile\r\n",
+      "│   ├── back-cover.pdf\r\n",
+      "│   ├── back-cover.tex\r\n",
+      "│   ├── front-cover.pdf\r\n",
+      "│   ├── front-cover.tex\r\n",
+      "│   ├── music.ly\r\n",
+      "│   ├── music.pdf\r\n",
+      "│   ├── parts-cello.pdf\r\n",
+      "│   ├── parts-viola.pdf\r\n",
+      "│   ├── parts-violin.pdf\r\n",
+      "│   ├── parts.ly\r\n",
+      "│   ├── preface.pdf\r\n",
+      "│   ├── preface.tex\r\n",
+      "│   ├── score.pdf\r\n",
+      "│   └── score.tex\r\n",
+      "├── parts.ily\r\n",
+      "├── \u001b[34;40msegments\u001b[00m/\r\n",
+      "│   ├── section-one.ily\r\n",
+      "│   ├── section-three.ily\r\n",
+      "│   └── section-two.ily\r\n",
+      "└── segments.ily\r\n",
+      "\r\n",
+      "3 directories, 22 files\r\n"
      ]
     }
    ],
@@ -845,7 +925,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/bin/sh: 1: tree: not found\r\n"
+      "\u001b[34;40mtrio_score/trio_score/build/letter-portrait/\u001b[00m\r\n",
+      "├── Makefile\r\n",
+      "├── back-cover.pdf\r\n",
+      "├── back-cover.tex\r\n",
+      "├── front-cover.pdf\r\n",
+      "├── front-cover.tex\r\n",
+      "├── music.ly\r\n",
+      "├── music.pdf\r\n",
+      "├── parts-cello.pdf\r\n",
+      "├── parts-viola.pdf\r\n",
+      "├── parts-violin.pdf\r\n",
+      "├── parts.ly\r\n",
+      "├── preface.pdf\r\n",
+      "├── preface.tex\r\n",
+      "├── score.pdf\r\n",
+      "└── score.tex\r\n",
+      "\r\n",
+      "0 directories, 15 files\r\n"
      ]
     }
    ],
@@ -877,7 +974,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/bin/sh: 1: tree: not found\r\n"
+      "\u001b[34;40mtrio_score/trio_score/distribution/\u001b[00m\r\n",
+      "\r\n",
+      "0 directories, 0 files\r\n"
      ]
     }
    ],
@@ -894,7 +993,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/bin/sh: 1: tree: not found\r\n"
+      "\u001b[34;40mtrio_score/trio_score/etc/\u001b[00m\r\n",
+      "\r\n",
+      "0 directories, 0 files\r\n"
      ]
     }
    ],
@@ -911,7 +1012,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/bin/sh: 1: tree: not found\r\n"
+      "\u001b[34;40mtrio_score/trio_score/test/\u001b[00m\r\n",
+      "├── test_materials.py\r\n",
+      "└── test_segments.py\r\n",
+      "\r\n",
+      "0 directories, 2 files\r\n"
      ]
     }
    ],
@@ -937,7 +1042,86 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/bin/sh: 1: tree: not found\r\n"
+      "\u001b[34;40mtrio_score/\u001b[00m\r\n",
+      "├── README.md\r\n",
+      "├── requirements.txt\r\n",
+      "├── setup.cfg\r\n",
+      "├── setup.py\r\n",
+      "└── \u001b[34;40mtrio_score\u001b[00m/\r\n",
+      "    ├── Makefile\r\n",
+      "    ├── __init__.py\r\n",
+      "    ├── \u001b[34;40mbuild\u001b[00m/\r\n",
+      "    │   ├── \u001b[34;40massets\u001b[00m/\r\n",
+      "    │   │   ├── instrumentation.tex\r\n",
+      "    │   │   └── performance-notes.tex\r\n",
+      "    │   ├── \u001b[34;40mletter-portrait\u001b[00m/\r\n",
+      "    │   │   ├── Makefile\r\n",
+      "    │   │   ├── back-cover.pdf\r\n",
+      "    │   │   ├── back-cover.tex\r\n",
+      "    │   │   ├── front-cover.pdf\r\n",
+      "    │   │   ├── front-cover.tex\r\n",
+      "    │   │   ├── music.ly\r\n",
+      "    │   │   ├── music.pdf\r\n",
+      "    │   │   ├── parts-cello.pdf\r\n",
+      "    │   │   ├── parts-viola.pdf\r\n",
+      "    │   │   ├── parts-violin.pdf\r\n",
+      "    │   │   ├── parts.ly\r\n",
+      "    │   │   ├── preface.pdf\r\n",
+      "    │   │   ├── preface.tex\r\n",
+      "    │   │   ├── score.pdf\r\n",
+      "    │   │   └── score.tex\r\n",
+      "    │   ├── parts.ily\r\n",
+      "    │   ├── \u001b[34;40msegments\u001b[00m/\r\n",
+      "    │   │   ├── section-one.ily\r\n",
+      "    │   │   ├── section-three.ily\r\n",
+      "    │   │   └── section-two.ily\r\n",
+      "    │   └── segments.ily\r\n",
+      "    ├── \u001b[34;40mdistribution\u001b[00m/\r\n",
+      "    ├── \u001b[34;40metc\u001b[00m/\r\n",
+      "    ├── \u001b[34;40mmaterials\u001b[00m/\r\n",
+      "    │   ├── __init__.py\r\n",
+      "    │   ├── \u001b[34;40mmy_droning_rhythm_maker\u001b[00m/\r\n",
+      "    │   │   ├── __init__.py\r\n",
+      "    │   │   ├── definition.py\r\n",
+      "    │   │   └── illustration.ly\r\n",
+      "    │   ├── \u001b[34;40mmy_fast_rhythm_maker\u001b[00m/\r\n",
+      "    │   │   ├── __init__.py\r\n",
+      "    │   │   ├── definition.py\r\n",
+      "    │   │   └── illustration.ly\r\n",
+      "    │   ├── \u001b[34;40mmy_pitches\u001b[00m/\r\n",
+      "    │   │   ├── __init__.py\r\n",
+      "    │   │   ├── definition.py\r\n",
+      "    │   │   └── illustration.ly\r\n",
+      "    │   └── \u001b[34;40mmy_slow_rhythm_maker\u001b[00m/\r\n",
+      "    │       ├── __init__.py\r\n",
+      "    │       ├── definition.py\r\n",
+      "    │       └── illustration.ly\r\n",
+      "    ├── \u001b[34;40msegments\u001b[00m/\r\n",
+      "    │   ├── __init__.py\r\n",
+      "    │   ├── \u001b[34;40msection_one\u001b[00m/\r\n",
+      "    │   │   ├── __init__.py\r\n",
+      "    │   │   ├── definition.py\r\n",
+      "    │   │   └── illustration.ly\r\n",
+      "    │   ├── \u001b[34;40msection_three\u001b[00m/\r\n",
+      "    │   │   ├── __init__.py\r\n",
+      "    │   │   ├── definition.py\r\n",
+      "    │   │   └── illustration.ly\r\n",
+      "    │   └── \u001b[34;40msection_two\u001b[00m/\r\n",
+      "    │       ├── __init__.py\r\n",
+      "    │       ├── definition.py\r\n",
+      "    │       └── illustration.ly\r\n",
+      "    ├── \u001b[34;40mstylesheets\u001b[00m/\r\n",
+      "    │   ├── parts.ily\r\n",
+      "    │   └── stylesheet.ily\r\n",
+      "    ├── \u001b[34;40mtest\u001b[00m/\r\n",
+      "    │   ├── test_materials.py\r\n",
+      "    │   └── test_segments.py\r\n",
+      "    └── \u001b[34;40mtools\u001b[00m/\r\n",
+      "        ├── ScoreTemplate.py\r\n",
+      "        ├── SegmentMaker.py\r\n",
+      "        └── __init__.py\r\n",
+      "\r\n",
+      "19 directories, 58 files\r\n"
      ]
     }
    ],
